# RAZ-RE

./: bn_XD0022_MD_V0.6.bin.bndb  registersxd0011.xml
Firmware/Libraries/N32G031xx_V2.2 (2).0/5-Hardware Evaulation Board/N32G031C8L7_STB_V1.0/: N32G031C8L7-STB_V1.0.asc  N32G031C8L7-STB_V1.0.pcb  N32G031C8L7-STB_V1.0.sch  N32G031C8L7-STB_V1.0.txt
Firmware/Libraries/N32G031xx_V2.2 (2).0/5-Hardware Evaulation Board/N32G031F6S7_STB_V1.0/: N32G031F6S7-STB_V1.0.asc  N32G031F6S7-STB_V1.0.txt  N32G031F6S7_STB_V1.0.pcb  N32G031F6S7_STB_V1.0.sch
Firmware/Libraries/N32G031xx_V2.2 (2).0/5-Hardware Evaulation Board/N32G031K8Q7-1_STB_V1.0/: N32G031K8Q7-1_STB_V1.0.asc  N32G031K8Q7-1_STB_V1.0.pcb  N32G031K8Q7-1_STB_V1.0.sch  N32G031K8Q7-1_STB_V1.0.txt
Firmware/Libraries/N32G031xx_V2.2 (2).0/5-Hardware Evaulation Board/N32G031K8Q7_STB_V1.0/: N32G031K8Q7-STB_V1.0.asc  N32G031K8Q7-STB_V1.0.txt  N32G031K8Q7_STB_V1.0.pcb  N32G031K8Q7_STB_V1.0.sch
Firmware/Libraries/N32G031xx_V2.2 (2).0/6-Software Development Kit/N32G031_FLASH_Programming_Algorithm.1.0.4/: FlashDev.c  FlashPrg.c  N32G031.uvopt  (+1 more)
Firmware/Libraries/ct018tn01/: ct018tn01.c  ct018tn01.h
Firmware/keil-mdk/MDK-ARM/: .clangd  .cmd.jlink  ReFlasher.cbuild-idx.yml  ReFlasher.cbuild-pack.yml  ReFlasher.cbuild-set.yml  ReFlasher.cproject.yml  ReFlasher.csolution.yml  dump_script.gdb  dump_script.py
Firmware/keil-mdk/MDK-ARM/tmp/: .ninja_log  CMakeCache.txt  CMakeLists.txt  build.ninja  cmake_install.cmake  roots.cmake
Firmware/keil-mdk/MDK-ARM/tmp/ReFlasher+RAZ/: CMakeLists.txt  groups.cmake  toolchain.cmake
Firmware/keil-mdk/MDK-ARM/tmp/ReFlasher+RAZ/src/ReFlasher+RAZ-stamp/: ReFlasher+RAZ-configure-.cmake  ReFlasher+RAZ-database-.cmake  ReFlasher+RAZ-source_dirinfo.txt
Firmware/keil-mdk/MDK-ARM/tmp/ReFlasher+RAZ/tmp/: ReFlasher+RAZ-cfgcmd.txt  ReFlasher+RAZ-mkdirs.cmake
Firmware/keil-mdk/inc/: adc.h  ct018tn01.h  dma.h  input.h  main.h  nv3029.h  pa7_input.h  pwm.h  sleep_wake.h  spi_flash.h  st7735.h  voltage_monitor.h
Firmware/keil-mdk/src/: adc.c  ct018tn01.c  dma.c  dma_example.c  input.c  main.c  nv3029.c  pa7_input.c  pwm.c  sleep_wake.c  st7735.c  voltage_monitor.c
Firmware/openocd/scripts/interface/: jlink.cfg
Flash/reflasher/: reflasher.py  requirements.txt
Libraries/n32g031_dma/: README.md
RAZ250000/: BinaryNinja Decompile.c  Gemini analysis decompile.md  README.md  XD0011_NTMB_V1.2.md  bn_decompile.h  geminireversecompile.c  geminireversecompile.h
XD0011/: README.md  XD0011_NTMB_V1.2.md  sed
XD0011/BINARY_NINJA/: BinaryNinja Decompile.c  bn_decompile.h
XD0011/GEMINI/: geminireversecompile.cfile
XD0011/GEMINI/simplification_of_ghidra _code_E/: ADC+BATTERY  GRAPHICS  IWDG+PWR  RCC+AFIO  TIMERS+PWM
XD0011/GEMINI/simplification_of_ghidra_code_F/: ADC+PIN_MAP  DMA_Management  EXT_FLASH_DRIVER  FLASH->LCD  GLOBALS+STATE_MACHINE  INIT+MAIN  INPUT  LCD+SPI1_low-level_dma  LCD_BIT_BANG  LCD_INIT  LCD_WINDOW_CTRL  SYS_INIT  UTIL+HELPER
XD0011/TRACES/: STEPS_cmd.jlink  tracer
XD0011/bfv.parser/: binE.js  binE_raw_image.js  binF.js  binF_raw_image.js
XD0011/flash_binaries/: onboard_flash_dump.binE
XD0011/gdb/: gdbserver
XD0011/ghidra/: XD0011_E.bin.c
XD0011/ghidra/XD0011_F/: IMPLEMENTATION_STATUS.md  README.md  XD0011_F.BIN.c  XD0011_F.BIN.h  XD0011_F_PROTOCOL_REFERENCE.md  XD0011_F_STRICT_ANALYSIS.md  XD0011_F_dot_to_svg_converter.py  XD0011_F_execution_flow.mmd  XD0011_F_function_dependency.dot  XD0011_F_generate_graphs.sh  XD0011_F_light_meter_driver.c  XD0011_F_light_meter_driver.h  function_list.txt
XD0011/jlink_cmds/: DOWNLOADBIN.cmd.jlink  JlinkExe  cmd_maker.sh  download_SRAM.cmd.jlink  upload.cmd.jlink
XD0011/lcd/LCD_INIT/: XD0011_E  XD0011_E.C  XD0011_F  XD0011_F2  XD0011_F2.C  parse_lcd_init.py
XD0011/mcu_binaries/: binID.list  download.cmd.jlink  download.sh  search_hex.sh  upload.cmd.jlink  upload.sh
XD0011/sram_binaaries/: download_SRAM.cmd.jlink
(+729 files in other folders)
